--- a/Desestruturacao/dest.html
+++ b/Desestruturacao/dest.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> K de karalho</h1>
+    <h1> TEste</h1>
 
     <script src="dest.js" ></script>
 </body>
